# OpenImageIO

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  .travis.yml-disabled  AGENTS.md  CHANGES  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  CREDITS.md  GOVERNANCE.md  INSTALL  INSTALL.md  LICENSE  LICENSE-THIRD-PARTY.md  LICENSE.md  Makefile  README  README.md  README.rst  RELEASING.md  RELICENSING.md  SECURITY.md  THIRD-PARTY.md  appveyor.yml  build  conanfile.txt  iinfo Args.xctestplan  package.py  pyproject.toml  sonar-project.properties  tasks.py
src/: CMakeLists.txt  patches.cpp
src/arnold/: Makefile  README  driver_socket.cpp  test.ass
src/bmp.imageio/: CMakeLists.txt  bmp.cpp  bmp.h  bmp_pvt.cpp  bmp_pvt.h  bmpinput.cpp  bmpoutput.cpp  module.mk
src/build-scripts/: CMakeLists.txt  OpenEXR-CMakeLists.txt  OpenImageIO.pc.in  build_Freetype.bash  build_OpenJPEG.bash  build_Ptex.bash  build_abi_tools.bash  build_ccache.bash  build_cmake.bash  build_gif.bash  build_libjpeg-turbo.bash  build_libpng.bash  build_libraw.bash  build_libtiff.bash  build_llvm.bash  build_ninja.bash  build_ocio.bash  build_opencolorio.bash  build_openexr.bash  build_openjph.bash  build_pugixml.bash  build_pybind11.bash  build_webp.bash  build_zlib.bash  ci-abicheck.bash  ci-benchmark.bash  ci-build-and-test.bash  ci-build.bash  ci-coverage.bash  ci-fuzztest.bash  ci-requirements-nanobind.txt  ci-rust-test.bash  ci-startup.bash  ci-test.bash  circleci-installdeps.bash  docker-centos.bash  gh-installdeps-centos.bash  gh-installdeps.bash  gh-win-installdeps.bash  install_homebrew_deps.bash  (+7 more)
src/cineon.imageio/: CMakeLists.txt  cineoninput.cpp  cineonoutput.cpp
src/cmake/: CXX11.cmake  Config.cmake.in  add_oiio_plugin.cmake  build_Freetype.cmake  build_GIF.cmake  build_GIF_CMakeLists.txt  build_Imath.cmake  build_Ktx.cmake  build_OpenColorIO.cmake  build_OpenEXR.cmake  build_OpenJPEG.cmake  build_PNG.cmake  build_Robinmap.cmake  build_TIFF.cmake  build_WebP.cmake  build_ZLIB.cmake  build_expat.cmake  build_fmt.cmake  build_gif.cmake  build_libdeflate.cmake  build_libjpeg-turbo.cmake  build_libuhdr.cmake  build_minizip-ng.cmake  build_openjph.cmake  build_pybind11.cmake  build_pystring.cmake  build_yaml-cpp.cmake  check_is_enabled.cmake  checked_find_package.cmake  colors.cmake  compiler.cmake  cuda_macros.cmake  dependency_utils.cmake  externalpackages.cmake  fancy_add_executable.cmake  install.cmake  oiio_macros.cmake  packaging.cmake  platform.cmake  pythonutils.cmake  (+3 more)
src/coiio/: CMakeLists.txt  c-imageio.cpp  c-imageio.h  c-imageio_defines.h  c-typedesc.cpp  c-typedesc.h  imageio.cpp  imageio.h  imageio_defines.h  typedesc.cpp  typedesc.h  util.h  util.hpp
src/contrib/: CMakeLists.txt
src/dds.imageio/: CMakeLists.txt  bcdec.h  dds_pvt.h  ddsinput.cpp  ddsoutput.cpp
src/dicom.imageio/: CMakeLists.txt  dicominput.cpp  dicomoutput.cpp
src/doc/: .gitignore  Building_the_docs.md  CHANGES-0.x.md  CHANGES-1.x.md  CLA-CORPORATE  CLA-INDIVIDUAL  CMakeLists.txt  CONTRIBUTOR-LICENSE  Description.txt  Doxyfile  Makefile  Welcome.txt  builtinplugins.rst  builtinplugins.tex  cliff.toml  conf.py  copyr.rst  copyr.tex  glossary.rst  glossary.tex  help2man_preformat.py  iconvert.rst  iconvert.tex  idiff.rst  idiff.tex  igrep.rst  igrep.tex  iinfo.rst  iinfo.tex  imagebuf.rst  imagebuf.tex  imagebufalgo.rst  imagebufalgo.tex  imagecache.rst  imagecache.tex  imageinput.rst  imageinput.tex  imageioapi.rst  imageioapi.tex  imageoutput.rst  (+30 more)
src/dpx.imageio/: CMakeLists.txt  dpxinput.cpp  dpxoutput.cpp
src/ffmpeg.imageio/: CMakeLists.txt  ffmpeginput.cpp  ffmpegoutput.cpp
src/field3d.imageio/: CMakeLists.txt  field3d_backdoor.h  field3d_pvt.h  field3dinput.cpp  field3doutput.cpp
src/fits.imageio/: CMakeLists.txt  fits_pvt.cpp  fits_pvt.h  fitsinput.cpp  fitsoutput.cpp
src/fonts/: CMakeLists.txt
src/fuzz/: CMakeLists.txt  fuzz_image.cpp  fuzz_utils.h  oiio_fuzz_image.options  populate_corpora.py
src/gif.imageio/: CMakeLists.txt  CMakeLists.txt~  gif.h  gifinput.cpp  gifinput.cpp~  gifoutput.cpp  gifoutput.cpp~
src/hdr.imageio/: CMakeLists.txt  hdrinput.cpp  hdroutput.cpp  module.mk  rgbe.cpp  rgbe.h
src/heif.imageio/: CMakeLists.txt  heifinput.cpp  heifoutput.cpp
src/htj2k.imageio/: CMakeLists.txt  jphoutput.cpp
src/hwy_test/: hwy_test.cpp
src/ico.imageio/: CMakeLists.txt  ico.h  icoinput.cpp  icooutput.cpp  module.mk
src/iconvert/: CMakeLists.txt  iconvert.cpp  module.mk
src/idiff/: CMakeLists.txt  idiff.cpp  module.mk
src/iff.imageio/: CMakeLists.txt  iff_pvt.cpp  iff_pvt.h  iffinput.cpp  iffoutput.cpp  noproxy-iff_pvt.cpp  noproxy-iff_pvt.h  noproxy-iffinput.cpp  noproxy-iffoutput.cpp
src/igrep/: CMakeLists.txt  igrep.cpp  module.mk
src/iinfo/: CMakeLists.txt  iinfo.cpp  module.mk
src/imiv/: CMakeLists.txt  README.md  embed_binary_header.cmake  embed_spirv_header.cmake  imiv_action_dispatch.cpp  imiv_actions.cpp  imiv_actions.h  imiv_app.cpp  imiv_app.h  imiv_aux_windows.cpp  imiv_backend.cpp  imiv_backend.h  imiv_backends.md  imiv_build_config.h.in  imiv_capture.cpp  imiv_developer_tools.cpp  imiv_developer_tools.h  imiv_drag_drop.cpp  imiv_drag_drop.h  imiv_file_actions.cpp  imiv_file_actions.h  imiv_file_dialog.cpp  imiv_file_dialog.h  imiv_frame.cpp  imiv_frame.h  imiv_frame_actions.h  imiv_image_library.cpp  imiv_image_library.h  imiv_image_list_ui.cpp  imiv_image_list_ui.h  imiv_image_save.cpp  imiv_image_save.h  imiv_image_view.cpp  imiv_image_view.h  imiv_imgui_metal_extras.h  imiv_loaded_image.cpp  imiv_loaded_image.h  imiv_main.cpp  imiv_menu.cpp  imiv_menu.h  (+58 more)
src/include/: CMakeLists.txt  SHA1.h  argparse.h  array_ref.h  array_view.h  atomic.h  boosttest.h  color.h  colortransfer.h  dassert.h  errorhandler.h  export.h  filesystem.h  filter.h  fmath.h  half.hpp  hash.h  image_view.h  imagebuf.h  imagebufalgo.h  imagebufalgo_util.h  imagecache.h  imageio.h  imageio_pvt.h  maketexture.h  optparser.h  osdep.h  paramlist.h  paramtype.h  plugin.h  pugiconfig.hpp  (+23 more)
(+2337 files in other folders)
